tests/NormalTests/paczka1/small_fuzzy/86200158.err
Error in line 1: V2flpRFaoi A712 54,7
Error in line 11: 91c S531 15,0
